--- a/projects/bootstrap/nica-reklama/css/styles.scss
+++ b/projects/bootstrap/nica-reklama/css/styles.scss
@@ -15,6 +15,9 @@
 // 34-40-40
 // 54-70-70
 
+/************************
+      ELEMENTS
+************************/
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -63,11 +66,7 @@ body {
     margin-top: 1rem;
   }
   .a-stat {
-    iconify-icon {
-      display: block;
-    }
     span {
-      display: block;
       font-size: 25px;
       font-weight: 500;
       padding-top: 0.8rem;
@@ -93,6 +92,7 @@ body {
     }
   }
   .persona {
+    padding: 0;
     h3 {
       font-size: 22px;
       font-weight: 700;
@@ -204,4 +204,43 @@ body {
 }
 .fw-900 {
   font-weight: 900;
+}
+
+@media only screen and (min-width: 768px) {
+  .business-description {
+    div * {
+      padding-left: 1rem;
+      align-self: flex-start;
+    }
+  }
+  .a-project {
+    img {
+      height: 262px;
+    }
+  }
+  .form-subscribe {
+    display: grid;
+    grid-template-columns: 2fr 6fr 3fr 2fr;
+
+    // overflow: hidden;
+
+    input {
+      justify-self: end;
+      align-self: center;
+      grid-column: 2/3;
+      border-radius: 0 !important;
+      border-bottom-left-radius: 0.375rem !important;
+      border-top-left-radius: 0.375rem !important;
+    }
+    button {
+      width: 100%;
+      justify-self: start;
+      align-self: center;
+      text-align: center;
+      grid-column: 3/4;
+      border-radius: 0 !important;
+      border-bottom-right-radius: 0.375rem !important;
+      border-top-right-radius: 0.375rem !important;
+    }
+  }
 }
