--- a/projects/bootstrap/nica-reklama/css/styles.css
+++ b/projects/bootstrap/nica-reklama/css/styles.css
@@ -7,8 +7,11 @@ body {
   font-weight: 400;
   color: #404445;
 }
+body nav {
+  height: 5rem;
+}
 body header {
-  height: calc(100vh - 4rem);
+  height: calc(100vh - 5rem);
   background: linear-gradient(rgba(98, 100, 113, 0.5), rgba(98, 100, 113, 0.5)), url("../pics/header-768.jpeg");
   background-size: cover;
   background-position: center;
@@ -40,7 +43,6 @@ body section .centravimo img {
 body h2 {
   font-size: 22px;
   font-weight: 500;
-  margin-top: 1rem;
 }
 body .a-stat span {
   font-size: 25px;
@@ -65,8 +67,25 @@ body .a-project h3 {
 body .a-project p {
   font-size: 18px;
 }
+body .a-project img {
+  height: 16.375rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 body .persona {
   padding: 0;
+  max-width: 24.5rem;
+}
+body .persona img {
+  height: 24.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+body .persona .rank {
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
 }
 body .persona h3 {
   font-size: 22px;
@@ -77,13 +96,22 @@ body .persona h4 {
   font-size: 16px;
   font-weight: 400;
 }
+body footer > div {
+  text-align: center;
+}
+body footer a {
+  display: block;
+}
 body footer p {
   color: #7a7c88;
+  line-height: normal;
+  margin-bottom: 0;
 }
 body footer h2 {
   margin-bottom: 2rem;
 }
 body footer .line-200 {
+  display: inline-block;
   width: 200px;
   height: 2px;
   border-top: 1px solid #707070;
@@ -216,5 +244,16 @@ body a {
     border-radius: 0 !important;
     border-bottom-right-radius: 0.375rem !important;
     border-top-right-radius: 0.375rem !important;
+  }
+  footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  footer div p {
+    text-align: start;
+  }
+  .copyright {
+    text-align: start !important;
   }
 }/*# sourceMappingURL=styles.css.map */
