--- a/projects/bootstrap/nica-reklama/css/styles.scss
+++ b/projects/bootstrap/nica-reklama/css/styles.scss
@@ -23,9 +23,11 @@ body {
   font-size: 16px;
   font-weight: 400;
   color: #404445;
-
+  nav {
+    height: 5rem;
+  }
   header {
-    height: calc(100vh - 4rem);
+    height: calc(100vh - 5rem);
     background: linear-gradient(
         rgba(98, 100, 113, 0.5),
         rgba(98, 100, 113, 0.5)
@@ -63,7 +65,7 @@ body {
   h2 {
     font-size: 22px;
     font-weight: 500;
-    margin-top: 1rem;
+    // margin-top: 1rem;
   }
   .a-stat {
     span {
@@ -90,9 +92,24 @@ body {
     p {
       font-size: 18px;
     }
+    img {
+      height: 16.375rem;
+      object-fit: cover;
+    }
   }
   .persona {
     padding: 0;
+    max-width: 24.5rem;
+
+    img {
+      height: 24.5rem;
+      object-fit: cover;
+      object-position: center;
+    }
+    .rank {
+      padding-top: 1.6rem;
+      padding-bottom: 1.6rem;
+    }
     h3 {
       font-size: 22px;
       font-weight: 700;
@@ -104,14 +121,23 @@ body {
     }
   }
   footer {
+    & > div {
+      text-align: center;
+    }
+    a {
+      display: block;
+    }
     p {
       color: #7a7c88;
+      line-height: normal;
+      margin-bottom: 0;
     }
 
     h2 {
       margin-bottom: 2rem;
     }
     .line-200 {
+      display: inline-block;
       width: 200px;
       // 1px išnyksta kartais
       height: 2px;
@@ -242,5 +268,18 @@ body {
       border-bottom-right-radius: 0.375rem !important;
       border-top-right-radius: 0.375rem !important;
     }
+  }
+  footer {
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      p {
+        text-align: start;
+      }
+    }
+  }
+  .copyright {
+    text-align: start !important;
   }
 }
