--- a/projects/graded-asignments/blog/styles.css
+++ b/projects/graded-asignments/blog/styles.css
@@ -1,49 +1,134 @@
 body {
-  --nav-height: 60px;
+  font-family: "Hind Madurai", sans-serif;
+  font-size: 16px;
+}
+
+.btn-primary {
+  background-color: #1289af;
+}
+.btn-primary:hover {
+  background-color: #1289d1;
 }
 
 nav {
-  height: var(--nav-height);
+  height: "60px";
 }
-.emph {
-  border-left: 4px solid blue;
-  margin: 4rem 0;
+nav .logo {
+  font-size: 32px;
+  font-weight: 700;
 }
-img {
-  margin: 2rem 0;
+nav .logo:hover {
+  color: #777;
+}
+nav .nav-link {
+  color: #333;
+}
+nav .nav-link:hover {
+  color: #111;
 }
 
 .header-box {
-  height: calc(100vh - var(--nav-height));
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),
-    url("./pics/header-bg.jpeg");
+  height: calc(100vh - 60px);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("./pics/header-bg.jpeg");
   background-position: center;
   background-size: cover;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  margin-bottom: 2rem;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 4rem;
 }
-.header-writings-box {
-  margin-left: 1.25rem;
+.header-box .header-writings-box {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  flex-basis: 50%;
+  align-items: flex-start;
 }
-.header-writings-box button {
+.header-box .header-writings-box h1 {
+  font-size: 56px;
+  width: 50%;
+}
+.header-box .header-writings-box a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+.header-box .header-writings-box .header-btn {
+  width: -moz-fit-content;
   width: fit-content;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-section {
-  margin-top: 1rem;
+.header-box .header-writings-box .header-btn img {
+  height: 1.5rem;
+  width: 1.5rem;
+  margin-right: 0.25rem;
 }
 
-.vid-container {
+.my-2rem {
+  margin: 2rem 0;
+}
+
+section {
+  margin-top: 2rem;
+}
+section .emphasized-paragraph {
+  border-left: 6px solid #1289af;
+  margin: 4rem 0;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 40px;
+}
+section .vid-container {
   height: 600px;
   width: auto;
-  background-image: url("./pics/play-btn-icon.svg"),
-    url("./pics/header-bg.jpeg");
+  background-image: url("./pics/header-bg.jpeg");
   background-position: center;
   background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+section .vid-container img {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
+  border-radius: 100%;
+}
+section .vid-container p {
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 400;
+  color: #666;
+}
+section .vid-container h2 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 40px;
+}
+section .vid-container figure {
+  color: #666;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+article {
+  margin-bottom: 6rem;
+}
+
+@media screen and (max-width: 991px) {
+  h1 {
+    font-size: 40px !important;
+  }
+  .emphasized-paragraph {
+    font-size: 24px !important;
+  }
+}
+@media screen and (max-width: 767px) {
+  h1 {
+    font-size: 34px !important;
+  }
+  .emphasized-paragraph {
+    font-size: 20px !important;
+  }
+}/*# sourceMappingURL=styles.css.map */
