--- a/projects/graded-asignments/kelioniu-puslapis/styles.css
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.css
@@ -153,4 +153,28 @@
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
   animation-timing-function: linear;
+}
+
+nav {
+  height: 4.4rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+}
+nav ul {
+  display: flex;
+  gap: 3rem;
+}
+nav ul a {
+  text-decoration: none;
+  color: #1b6bed;
+  font-weight: 600;
+}
+nav img {
+  height: 15px;
+}
+
+body {
+  font-size: 16px;
 }/*# sourceMappingURL=styles.css.map */
