--- a/projects/graded-asignments/kelioniu-puslapis/styles.css
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.css
@@ -1,3 +1,31 @@
+html {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+body {
+  font-size: 16px;
+}
+
+nav {
+  height: 4.4rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+}
+nav ul {
+  display: flex;
+  gap: 3rem;
+}
+nav ul a {
+  text-decoration: none;
+  color: #1b6bed;
+  font-weight: 600;
+}
+nav img {
+  height: 15px;
+}
+
 .slider {
   position: relative;
   border: 1px solid #777;
@@ -155,26 +183,74 @@
   animation-timing-function: linear;
 }
 
-nav {
-  height: 4.4rem;
+footer {
+  color: white;
+  background-color: #11224d;
+  padding-top: 4.4rem;
+}
+footer .footer_top {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  padding-bottom: 3.2rem;
 }
-nav ul {
+footer .footer_top .footer_top_left {
   display: flex;
-  gap: 3rem;
+  flex-direction: column;
+  gap: 2.7rem;
 }
-nav ul a {
-  text-decoration: none;
-  color: #1b6bed;
-  font-weight: 600;
+footer .footer_top .footer_top_left img {
+  color: #f8f6f6 !important;
+  height: 30px;
 }
-nav img {
-  height: 15px;
+footer .footer_top .footer_top_left .footer_top_left_down {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 18px;
+  font-weight: 700;
 }
-
-body {
+footer .footer_top .footer_top_left .footer_top_left_down svg {
+  border: 2px solid white;
+  border-radius: 100%;
+  padding: 7px;
+  height: 24px;
+}
+footer .footer_top .footer_top_right {
+  display: flex;
+  color: #dcf2ed;
+  gap: 5rem;
   font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5rem;
+}
+footer .footer_top .footer_top_right .footer_top_navigacija {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+}
+footer .footer_top .footer_top_right .footer_top_navigacija a {
+  text-decoration: none;
+  color: #dcf2ed;
+}
+footer .footer_top .footer_top_right .footer_top_kontaktai {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-between;
+}
+footer .footer_top .footer_top_right h3 {
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+}
+footer .copyright {
+  padding: 2.2rem 0;
+  color: #dcf2ed;
+  text-align: center;
+  border-top: 1px dotted #dcf2ed;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.3rem;
 }/*# sourceMappingURL=styles.css.map */
