[kelioniu]:wrk on slider-card

--- a/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
@@ -1,9 +1,13 @@
+@import "../variables";
+
 nav {
+  margin: 0 auto;
+  width: $container-width;
   height: 4.4rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.15);
   ul {
     display: flex;
     gap: 3rem;
