--- a/projects/graded-asignments/kelioniu-puslapis/components/_footer.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_footer.scss
@@ -1,10 +1,14 @@
+@import "../variables";
+
 footer {
   color: white;
   background-color: #11224d;
   padding-top: 4.4rem;
   .footer_top {
+    width: $container-width;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding-bottom: 3.2rem;
     .footer_top_left {
