--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.css
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.css
@@ -1,4 +1,5 @@
 html {
+  box-sizing: border-box;
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 
@@ -7,11 +8,13 @@ body {
 }
 
 nav {
+  margin: 0 auto;
+  width: 65%;
   height: 4.4rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.15);
 }
 nav ul {
   display: flex;
@@ -32,8 +35,10 @@ footer {
   padding-top: 4.4rem;
 }
 footer .footer_top {
+  width: 65%;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding-bottom: 3.2rem;
 }
